Chatroom styled somewhat

--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -1,7 +1,7 @@
 // To style the wrapping div
 .message-row {
-  margin-bottom: 10px;
-  padding: 8px;
+  margin-bottom: 3px;
+  padding: 5px;
 }
 
 // To style the message itself
@@ -15,8 +15,18 @@
 
 .sender-style {
   background-color: $success;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .receiver-style {
-  background-color: lightblue;
+  background-color: #2B3A67;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+#message-p {
+  margin-bottom: 2px;
+}
+
+.message-box {
+  color: white;
 }
