--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,7 +1,14 @@
 <div class="navbar-space"></div>
-  <h1><%= @chatroom.name %></h1>
+<div class="chatroom">
+  <h1 id="chatroom-name"><%= @chatroom.name %></h1>
+  <div class="chatroom-friends">
+    <h6> Mates: </h6>
+    <div id="chatroom-friend-avatars">
+    <%= render "shared/index_avatars", concert: @group %>
+    </div>
+  </div>
   <div class="chatbox-show">
     <%= render "chatbox", chatroom: @chatroom, message: @message, group: @group %>
   </div>
-
+</div>
 <!-- HEROKU needs to install redis. Check the lecture notes on Chat-->
