--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,6 @@
-<div id="message-<%= message.id %>">
+<div class="message-box">
   <small>
-    <strong><%= message.user.first_name %></strong>
-  <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+    <strong><%= message.user.first_name %>:</strong>
   </small>
-  <p><%= message.content %></p>
+  <p id="message-p"><%= message.content %></p>
 </div>
