added overflow to concert show desc chatroom header links to group

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -31,6 +31,8 @@
   padding: 13px;
   margin: 0 auto;
   border-radius: 16px;
+  height: 100px;
+  overflow: scroll;
   p {
     color: #2b3a67;
     font-size: 11px;
