--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -14,6 +14,7 @@
     color: #2B3A67;
     text-align: center;
     font-weight: 700;
+
   }
 
   .messages {
@@ -54,6 +55,8 @@
       flex-grow: 1;
     }
   }
-
-
+  a {
+    text-decoration: none;
+    color: #2B3A67;
+  }
 }
