quick fix on index oops

--- a/app/assets/stylesheets/pages/_group_new.scss
+++ b/app/assets/stylesheets/pages/_group_new.scss
@@ -15,7 +15,7 @@
   padding: 10px;
 
   .friends-invite {
-    width: 290px;
+    width: 300px;
     margin: 0 auto;
     display: flex;
     margin-bottom: 15px;
@@ -25,7 +25,7 @@
     padding: 7px 10px;
     color: white;
     background-color: #2B3A67;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   .group-avatar {
@@ -62,4 +62,10 @@
     justify-content: center;
     align-items: center;
   }
+}
+
+.groups-new-h3 {
+  color: #2B3A67;
+  font-size: 18px;
+  text-align: center;
 }
