fixed landing and added title to concert index

--- a/app/assets/stylesheets/pages/_landing.scss.erb
+++ b/app/assets/stylesheets/pages/_landing.scss.erb
@@ -1,7 +1,7 @@
 #landing-container {
   background-color: #2b3a67;
   padding: 15px;
-  min-height: 100vh;
+  height: 720px;
   display: flex;
   flex-direction: column;
   justify-content: center;
