--- a/app/assets/stylesheets/components/_landing.scss
+++ b/app/assets/stylesheets/components/_landing.scss
@@ -1,44 +1,44 @@
-#landing-container {
-  background-color: #2b3a67;
-  padding: 15px;
-  height: 746px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+// #landing-container {
+//   background-color: #2b3a67;
+//   padding: 15px;
+//   height: 746px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   text-align: center;
 
-  img {
-    margin-left: 25px;
-  }
+//   img {
+//     margin-left: 25px;
+//   }
 
-  p {
-    font-size: 13px;
-    color: white;
-  }
+//   p {
+//     font-size: 13px;
+//     color: white;
+//   }
 
-  #p1 {
-    margin-top: 20px;
-  }
+//   #p1 {
+//     margin-top: 20px;
+//   }
 
-  #p2 {
-    margin-bottom: 25px;
-  }
+//   #p2 {
+//     margin-bottom: 25px;
+//   }
 
-  #landing-btn {
-    background-color: $success;
-    border: 1px solid $success;
-    border-radius: 7px;
-    color: white;
-    text-decoration: none;
-    padding: 8px 12px;
-    transition: 0.02s;
-  }
+//   #landing-btn {
+//     background-color: $success;
+//     border: 1px solid $success;
+//     border-radius: 7px;
+//     color: white;
+//     text-decoration: none;
+//     padding: 8px 12px;
+//     transition: 0.02s;
+//   }
 
-  #landing-btn:active {
-    background-color: $success;
-    border: 1px solid white;
-    transform: translateY(-0.15em);
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
-  }
-}
+//   #landing-btn:active {
+//     background-color: $success;
+//     border: 1px solid white;
+//     transform: translateY(-0.15em);
+//     box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.09) 0px 4px 6px -2px;
+//   }
+// }
