--- a/app/views/invitations/_accept_button.html.erb
+++ b/app/views/invitations/_accept_button.html.erb
@@ -6,5 +6,8 @@
             action: "click->sweet-alert#fireModal",
             sweet_alert_title_value: "You've accepted the invitation!",
             sweet_alert_text_value: "Get ready to rock your head out!",
-            sweet_alert_icon_value: "success"
-            }  %>
+            sweet_alert_icon_value: "success",
+            sweet_alert_buttons_value: false
+            } %>
+
+<!-- Go to group path-->
