--- a/app/views/invitations/_decline_button.html.erb
+++ b/app/views/invitations/_decline_button.html.erb
@@ -6,5 +6,8 @@
             action: "click->sweet-alert#fireModal",
             sweet_alert_title_value: "You've declined the invitation!",
             sweet_alert_text_value: "Perhaps next time with a better mob, hey?",
-            sweet_alert_icon_value: "success"
+            sweet_alert_icon_value: "success",
+            sweet_alert_buttons_value: false
             }  %>
+
+<!-- stays the same page-->
