--- a/app/assets/stylesheets/components/_concert_index.scss
+++ b/app/assets/stylesheets/components/_concert_index.scss
@@ -83,3 +83,11 @@ a {
   font-size: 24px;
   color: #2B3A67;
 }
+
+.p1-basic-styling {
+  text-align: center;
+  font-weight: 600;
+  font-size: 14px;
+  color: #2B3A67;
+
+}
