--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-space"></div>
 
 <h1 id="group-new-h1"><%= @concert.artist.name %></h1>
-<h3>At <%= @concert.venue %></h3>
+<h3 class= "text-center mb-0 fw-bold username-attending">At <%= @concert.venue %></h3>
 
 <div class="friend-list">
 
@@ -9,7 +9,7 @@
     <%= render "shared/search-bar", placeholder: "Find a mate!", path: new_concert_group_path %>
   </div>
 
-  <h3>Choose who to invite!</h3>
+  <h3 class= "text-center mb-0 fw-bold username-attending">Choose who to invite!</h3>
 
   <div class="create-group">
     <%= simple_form_for [@concert, @group] do |f| %>
