--- a/app/assets/stylesheets/components/_concert_index.scss
+++ b/app/assets/stylesheets/components/_concert_index.scss
@@ -126,3 +126,16 @@ a {
   color: #2B3A67;
   font-weight: 700;
 }
+
+#concert-index-h1 {
+  font-weight: 700;
+  color: #2B3A67;
+
+  text-align: center;
+}
+
+#concert-index-h2 {
+  font-weight: 700;
+  color: #2B3A67;
+  text-align: center;
+}
