--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -28,11 +28,14 @@
   color: #2b3a67;
   width: 310px;
   font-size: 12px;
-  padding: 13px;
+  padding: 8px;
+  padding-left: 12px;
   margin: 0 auto;
   border-radius: 16px;
-  max-height: 100px;
+  max-height: 95px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   overflow: scroll;
+  border: 1px solid lightgrey;
   p {
     color: #2b3a67;
     font-size: 14px;
@@ -224,4 +227,42 @@
       margin-bottom: 0;
     }
   }
+}
+
+.invitation-status {
+  font-size: 16px;
+  font-weight: 700;
+  color: #2b3a67;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 6px;
+}
+
+.invitation-box {
+  width: 77%;
+  margin: 0 auto;
+  margin-bottom: 12px;
+}
+
+.invitation-box-2 {
+  text-align: center;
+  margin: 20px auto;
+  margin-bottom: 70px;
+
+}
+
+#show-btn-groups {
+  background-color: $success;
+  text-align: center;
+  border-radius: 7px;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(206,89,55,0);
+  text-shadow: 1px 1px 1px rgba(0,0,0,.5);
+  text-shadow: -1px -1px 1px rgba(255,255,255,.1);
+  text-decoration: none;
+  padding: 10px 25px;
+  transition: 0.02s;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
