--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,7 +1,7 @@
 <div id="page-container">
 
-  <h1>Upcoming concerts</h1>
-  <h2>Invite your mates</h2>
+  <h1 id="concert-index-h1">Upcoming concerts</h1>
+  <h2 id="concert-index-h2">Invite your mates</h2>
 
   <div class="search">
     <%= render "shared/search-bar", placeholder: "Explore upcoming gigs", path: concerts_path %>
