--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -21,26 +21,30 @@
     </div>
   </div>
 
-  <h2>🧑‍🤝‍🧑 Awaiting response from <%= pluralize(@pending_invitations.count, 'mate') %></h2>
-  <div>
-    <% if @pending_invitations.empty? %>
-      <div>Everybody has responded.</div>
-    <% else %>
-      <div class="avatar-container">
-        <% @pending_invitations.first(5).each do |invitation|%>
-          <%= cl_image_tag invitation.user.photo.key, class: "avatar" %>
-        <% end %>
-      </div>
-      <% if @pending_invitations.count > 5 %>
-        <div class="avatar-overflow">
-          + <%= @pending_invitations.count - 5 %>
+  <% if @pending_invitations.count > 0 %>
+    <h2 class="invitation-status">🧑‍🤝‍🧑 Awaiting response from <%= pluralize(@pending_invitations.count, 'mate') %></h2>
+  <% else %>
+    <h2 class="invitation-status">🧑‍🤝‍🧑 No pending invitations!</h2>
+  <% end %>
+    <div class="invitation-box">
+      <% if @pending_invitations.empty? %>
+        <div>Everybody has responded.</div>
+      <% else %>
+        <div class="avatar-container">
+          <% @pending_invitations.first(5).each do |invitation|%>
+            <%= cl_image_tag invitation.user.photo.key, class: "avatar" %>
+          <% end %>
         </div>
+        <% if @pending_invitations.count > 5 %>
+          <div class="avatar-overflow">
+            + <%= @pending_invitations.count - 5 %>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
 
-  <h2>🧑‍🤝‍🧑 <%= pluralize(@accepted_invitations.count, 'mate') %> going</h2>
-  <div>
+  <h2 class="invitation-status">🧑‍🤝‍🧑 <%= pluralize(@accepted_invitations.count, 'mate') %> going</h2>
+  <div class="invitation-box">
     <% if @accepted_invitations.empty? %>
       <div>Nobody has said they're going yet!</div>
     <% else %>
@@ -57,8 +61,8 @@
     <% end %>
   </div>
 
-  <div id="show-btn-container">
-    <%= link_to "Chat with this group!", chatroom_path(@group), id:"show-btn" %>
+  <div class="invitation-box-2">
+    <%= link_to "Chat with this group!", chatroom_path(@group), id:"show-btn-groups" %>
   </div>
 
 </div>
