--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -3,6 +3,6 @@
   <div id="tagline">
     <p id="p1">Find your next gig buddies.</p>
     <%= link_to "Connect Spotify", user_spotify_omniauth_authorize_path, id:"landing-btn" %>
-    <h5>*Spotified required</h5>
+    <h5>*Spotify required</h5>
   </div>
 </div>
