--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,7 +20,7 @@
       <% if @user.groups.empty? && @user == current_user %>
         <ul class="profile-artist-cards">
           <li class="card-info" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(''); background-size: cover">
-            <h3 class="fs-10 fw-bold text-white text-center"> You are not going to anything yet!</h3>
+            <h3 class="fs-10 fw-bold text-white text-center"> You're not going to anything yet!</h3>
           </li>
         </ul>
       <% elsif @user.groups.empty? %>
