--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,25 @@
 
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<br>
+WWW <br>
+WWW <br>
+WWW <br>
+<!-- Rectangular switch -->
+<label class="switch">
+  <input type="checkbox">
+  <span class="slider"></span>
+</label>
+<br>
+<!-- Rounded switch -->
+<label class="switch">
+  <input type="checkbox">
+  <span class="slider round"></span>
+</label>
+
+<br>
+
+<label class="switch">
+<%= check_box_tag 'user_ids[]', type: "switch"  %>
+<span class="slider"></span>
+</label>
