--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -19,7 +19,11 @@
             <%= cl_image_tag user.photo.key, class: "avatar group-avatar" %>
             <p class="ms-2 mb-0"><%= user.first_name + " " + user.last_name %></p>
           </div>
-          <%= check_box_tag 'user_ids[]', user.id %></div>
+          <label class="switch">
+            <%= check_box_tag 'user_ids[]', user.id %>
+            <span class="slider round"></span>
+          </label>
+          </div>
           <% end %>
         <%= f.submit "Make a group!", id: "group-btn" %>
       <% end %>
