--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -28,8 +28,8 @@
       <% else %>
         <div class="avatar-container">
           <% @pending_invitations.first(5).each do |invitation|%>
-            <% if user.photo.attached? %>
-              <%= cl_image_tag user.photo.key, class: "avatar group-avatar" %>
+            <% if invitation.user.photo.attached? %>
+              <%= cl_image_tag invitation.user.photo.key, class: "avatar group-avatar" %>
             <% else %>
               <%= image_tag "default_avatar.jpg", class: "avatar group-avatar" %>
             <% end %>
@@ -49,8 +49,8 @@
       <% else %>
         <div class="avatar-container">
           <% @accepted_invitations.each do |invitation|%>
-            <% if user.photo.attached? %>
-              <%= cl_image_tag user.photo.key, class: "avatar group-avatar" %>
+            <% if invitation.user.photo.attached? %>
+              <%= cl_image_tag invitation.user.photo.key, class: "avatar group-avatar" %>
             <% else %>
               <%= image_tag "default_avatar.jpg", class: "avatar group-avatar" %>
             <% end %>
