--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -32,3 +32,10 @@
   margin-bottom: 66px;
   margin-top: 80px;
 }
+
+#page-container-index {
+  position: relative;
+  min-height: 100vh;
+  margin-top: 80px;
+  margin-bottom: 75px;
+}
