--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -1,4 +1,4 @@
-<div id="page-container">
+<div id="page-container-index">
 
   <h1 id="concert-index-h1">Upcoming concerts</h1>
   <h2 id="concert-index-h2">Invite your mates</h2>
