--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,4 +1,4 @@
-<div id="page-container">
+<div id="page-container-chatroom">
   <div class="chatroom">
     <h1 id="chatroom-name"><%= link_to "#{@chatroom.name}", group_path(@group) %></h1>
     <div class="chatroom-friends">
