--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -39,3 +39,10 @@
   margin-top: 80px;
   margin-bottom: 75px;
 }
+
+#page-container-chatroom {
+  position: relative;
+  min-height: 700px;
+  margin-top: 80px;
+  margin-bottom: 40px;
+}
