--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -40,10 +40,10 @@
   margin-bottom: 75px;
 }
 
-#page-container-chatroom {
+#page-container-chat {
   position: relative;
-  min-height: 700px;
+  min-height: calc(100vh - 80px);
   margin-top: 80px;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 }
 //
