--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -2,7 +2,6 @@
   margin-top: 9px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   flex-grow: 1;
   height: calc(100vh - 340px);
   max-height: 550px;
@@ -22,8 +21,7 @@
   }
 
   .messages {
-    min-height: 400px;
-    height: 100%;
+    height: 390px;
     overflow: scroll;
     padding: 1rem;
   }
