--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -16,7 +16,7 @@
                 <p><%= concert.venue %>, <%= concert.location %></p>
               </div>
               <div class="concert-avatars">
-                <%= render "shared/index_avatars", concert: concert %>
+                <%= render "shared/index_avatars", concert: invite.group %>
               </div>
             </div>
             <div class="status-buttons">
